Fix mobile layout issue (hopefully)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,7 +16,7 @@ h1.question {
   font-size: 2.4rem;
   font-weight: 500; }
 
-@media (max-width: 375px) {
+@media (max-width: 450px) {
   body {
     font-size: 11px; }
 
@@ -39,10 +39,12 @@ body {
     justify-content: space-evenly;
     height: 60vh; }
 
-@media (max-width: 375px) {
+@media (max-width: 450px) {
   .container {
-    max-width: 320px; } }
-@media (min-width: 376px) {
+    max-width: 340px; }
+    .container .inner-container {
+      height: 75vh; } }
+@media (min-width: 451px) {
   .choice-grid {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
@@ -52,7 +54,7 @@ body {
       grid-column: span 2; }
     .choice-grid .btn:nth-child(11) {
       grid-column: 3 / span 2; } }
-@media (max-width: 375px) {
+@media (max-width: 450px) {
   .choice-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -78,7 +80,7 @@ footer {
   footer.incorrect {
     background-color: rgba(219, 146, 146, 0.75); }
 
-@media (max-width: 375px) {
+@media (max-width: 450px) {
   footer {
     max-height: 20vh;
     padding: 8% 0; } }
@@ -103,7 +105,7 @@ footer {
   #speaker-btn:hover {
     border-color: #73C2E0; }
 
-@media (max-width: 375px) {
+@media (max-width: 450px) {
   #speaker-btn {
     width: 60px;
     height: 60px; }
