--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -7,8 +7,8 @@ $correct-color: rgba(#95D9AF, 0.75);
 $incorrect-color: rgba(#DB9292, 0.75);
 
 /* Breakpoints for responsive design */
-$breakpoint-desktop: 376px;
-$breakpoint-mobile: 375px;
+$breakpoint-desktop: 451px;
+$breakpoint-mobile: 450px;
 
 /* Fonts */
 $font-stack: "Avenir Next", sans-serif;
